petapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petapp-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb" # or "elb" for a classic load balancer
spec:
  type: LoadBalancer
  selector:
    app: petapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
